Finally got filepath